# gecko-dev

./: .eslintignore  Cargo.toml
.cargo/: config.in
toolkit/components/geometry/: Cargo.toml  moz.build
toolkit/components/geometry/js/: Geometry.jsm  GeometryScaffolding.cpp  GeometryScaffolding.h  moz.build
toolkit/components/geometry/src/: Geometry.jsm  geometry.udl  lib.rs
toolkit/components/uniffi-bindgen-gecko-js/: Cargo.toml  askama.toml  mach_commands.py
toolkit/components/uniffi-bindgen-gecko-js/fixtures/: Arithmetic.jsm  ArithmeticScaffolding.cpp  ArithmeticScaffolding.h  Geometry.jsm  GeometryScaffolding.cpp  GeometryScaffolding.h  README.md  Rondpoint.jsm  RondpointScaffolding.cpp  RondpointScaffolding.h  moz.build
toolkit/components/uniffi-bindgen-gecko-js/fixtures/tests/: test_arithmetic.js  test_geometry.js  test_rondpoint.js  test_type_checking.js  xpcshell.ini
toolkit/components/uniffi-bindgen-gecko-js/fixtures/tests/xpcshell/: test_rondpoint.js  test_tabs.js  test_type_checking.js  xpcshell.ini
toolkit/components/uniffi-bindgen-gecko-js/src/: interface_ext.rs  lib.rs  main.rs  render.rs
toolkit/components/uniffi-bindgen-gecko-js/src/render/: cpp.rs  js.rs  mod.rs  shared.rs  webidl.rs
toolkit/components/uniffi-bindgen-gecko-js/src/templates/: Bindings.jsm  Scaffolding.cpp  Scaffolding.h  Scaffolding.webidl
toolkit/components/uniffi-bindgen-gecko-js/src/templates/js/: Boolean.jsm  Enum.jsm  Error.jsm  Float32.jsm  Float64.jsm  Helpers.jsm  Int16.jsm  Int32.jsm  Int64.jsm  Int8.jsm  Map.jsm  Object.jsm  Optional.jsm  Record.jsm  Records.jsm  Sequence.jsm  String.jsm  TopLevelFunctions.jsm  Types.jsm  UInt16.jsm  UInt32.jsm  UInt64.jsm  UInt8.jsm  macros.jsm  wrapper.jsm
(+28 files in other folders)
