[package]
name = "uniffi-example-geometry"
edition = "2018"
version = "0.17.0"
authors = ["Firefox Sync Team <sync-team@mozilla.com>"]
license = "MPL-2.0"
publish = false

[dependencies]
uniffi = { git = "https://github.com/bendk/uniffi-rs.git", branch="seperate-bindings-mvp" }
uniffi_macros = { git = "https://github.com/bendk/uniffi-rs.git", branch="seperate-bindings-mvp" }
thiserror = "1"

[build-dependencies]
uniffi_build = { git = "https://github.com/bendk/uniffi-rs.git", branch="seperate-bindings-mvp", features = [ "builtin-bindgen" ]}

